# solana-dex-amm-fabio

./: .env.example  .gitignore  DELIVERABLES.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  INSTALLATION_STATUS.md  NEXT_STEPS.md  PHANTOM_WALLET_SETUP.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RESPONSE_TO_CLIENT_TOKEN_MODULE.md  TOKEN_CREATION_MODULE_PROPOSAL.md  WALLET_SUMMARY.md  WHAT_TO_DO_NEXT.md  check-lp-balance.js
anchor/: .env.example  Anchor.toml  COMMENTS_FOR_EVM_DEVELOPERS.md  package.json  tsconfig.json
anchor/programs/dex/: Cargo.toml
anchor/programs/dex/src/: constants.rs  errors.rs  lib.rs  state.rs
anchor/programs/dex/src/instructions/: add_liquidity.rs  initialize_lp_mint.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs
anchor/tests/: dex.ts
docs/: CLIENT_REPORT.docx  CLIENT_REPORT.md  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  SOLUTION_ARCHITECTURE.md
frontend/: .env.example  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  polyfills.ts  vite-env.d.ts
frontend/src/components/: CreatePoolCard.tsx  Header.tsx  LiquidityCard.tsx  PoolList.tsx  SwapCard.tsx  WalletButton.tsx  WalletProvider.tsx
frontend/src/config/: env.ts
frontend/src/hooks/: usePool.ts  useProgram.ts  useTokenBalance.ts
frontend/src/idl/: dex.ts
frontend/src/pages/: Home.tsx  (+3 more)
overview/: PROGRAM_LOGIC.md  account.txt  client.txt  conversation.txt  details.txt  project-analysis.txt  proposal.txt  requirements-v1.txt
scripts/: create-pool.ts  create-test-tokens.ts  deploy.sh  package.json
(+6 files in other folders)
